--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,16 @@
     "require": {
         "php": "~7.0.0",
         "ext-curl": "*",
-        "lizards-and-pumpkins/catalog": "~1.1.0"
+        "lizards-and-pumpkins/catalog": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.7",
         "lizards-and-pumpkins/coding-standards": "dev-master"
     },
     "autoload": {
-        "psr-4": {"LizardsAndPumpkins\\DataPool\\SearchEngine\\Elasticsearch\\": "src/"}
+        "psr-4": {
+            "LizardsAndPumpkins\\DataPool\\SearchEngine\\Elasticsearch\\": "src/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
