--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": "~7.0.0",
         "ext-curl": "*",
         "lizards-and-pumpkins/catalog": "*",
-        "ext-json": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
